# monitoring_folder-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  main.py
demo/nested/: test.txt
src/: main.rs
src/file_processing/: file_metadata.rs  file_state.rs  mod.rs
src/utils/: generate_metadata.rs  mod.rs
