[package]
name = "monitor_folder"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4"
uuid = { version = "1.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0"

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
